# borrow-fighters

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  temp.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: art-mood.yml  bug.yml  character.yml  decision-adr.yml  proposal.yml
.github/workflows/: docs-check.yml  pr-title.yml  rust-check.yml
assets/audio/: ATTRIBUTION.md  README.md  audio_manifest.json
assets/lore/: story.json
assets/placeholder/: arena-biotic.md  arena-fortaleza.md  arena-java-street.md  (+25 more)
docs/: 00-vision.md  01-mini-gdd.md  02-prototype-scope.md  03-backlog.md  04-team-briefing.md  05-governance.md  06-release-process.md  07-art-direction.md  08-code-architecture.md  09-ai-collaboration.md  10-greybox-playtest.md  11-sprite-pipeline.md  12-technical-combat-guide.md  12-worldbuilding.md  13-combat-design-roadmap.md  14-audio-pipeline.md  15-character-combat-matrix.md  16-sprite-combat-viewer-roadmap.md  17-visual-scale-and-stage-metrics.md  18-sprite-studio.md
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs
tests/: arena_rotation.rs  attack_frame_data.rs  audio_manifest.rs  binary_text.rs  character_identity_tuning.rs  characters.rs  cli.rs  combat_lab.rs  combat_rules.rs  cpu_traditional_moves.rs  feature_flags.rs  lore_book.rs  move_data.rs  sprite_frames.rs  sprite_manifest.rs  sprite_selection.rs  sprite_viewer.rs  traditional_moves.rs
tools/sprite-studio/src-tauri/: Cargo.toml  tauri.conf.json
tools/sprite-studio/src-tauri/src/: lib.rs  main.rs
(+96 files in other folders)
