[package]
name = "borrow-fighters-sprite-studio"
version = "0.1.0"
description = "Borrow Fighters sprite atlas and combat metadata tool"
authors = ["Borrow Fighters contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "borrow_fighters_sprite_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "=1.5.6", features = [] }

[dependencies]
tauri = { version = "=1.8.3", features = [
    "custom-protocol",
    "dialog-open",
    "dialog-save",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
